# codengine

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
codengine-analyzer-py/: README.md  pyproject.toml
codengine-analyzer-py/codengine_analyzer/: __init__.py  __main__.py
codengine-analyzer-py/tests/: test_conformance.py
codengine-analyzer-ts/: README.md
codengine-cli/: README.md  package.json
codengine-cs/: README.md
codengine-dart/: README.md
codengine-loader-ts/: README.md  package.json
codengine-manifest/: README.md  package.json  tsconfig.json
codengine-parser/: README.md  package.json  tsconfig.json
codengine-py/codengine-core-py/: README.md  pyproject.toml
codengine-py/codengine-core-py/codengine_core/: __init__.py  task_definition.py  types.py
codengine-py/codengine-loader-py/: README.md  pyproject.toml
codengine-py/codengine-loader-py/codengine_loader/: __init__.py  functions.py
codengine-py/codengine-loader-py/tests/: test_functions.py  test_invocation.py
codengine-py/codengine-worker-py/: README.md  pyproject.toml
codengine-py/codengine-worker-py/codengine_worker/: __init__.py  __main__.py  worker.py
codengine-py/codengine-worker-py/tests/: test_worker.py
codengine-py/codengine-worker-py/tests/fixtures/: tasks.py
codengine-runner-py/: README.md  pyproject.toml
codengine-runner-py/codengine_runner/: __init__.py  __main__.py  functions.py  runtime.py
codengine-runner-py/tests/: test_conformance.py  test_functions.py
codengine-runner-py/tests/fixtures/: conflict_a.py  conflict_b.py
codengine-runner-ts/: README.md  package.json
codengine-spec/: README.md  packaging.md
plans/: 0001-codengine-spec.md  0002-codengine-parser.md  0003-codengine-runner-ts.md  0004-codengine-runner-py.md  0005-codengine-cli.md  0006-function-invocation-contract.md  0007-analyzer-and-task-definitions.md  0008-manifest.md  0009-manifest-functions-globs.md  0010-multi-workflow-registry.md  0011-module-environment-and-loaders.md  0012-per-language-reorg.md  0013-dart-support.md  0014-csharp-support.md  0015-core-packages.md  0016-module-package-format.md  0017-cross-language-execution.md  0018-dart-cs-workers.md  0019-async-user-functions.md  0020-remote-transport.md
(+287 files in other folders)
