[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codengine-analyzer"
version = "0.1.0"
description = "Analyze Python task functions into codengine task definitions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
include = ["codengine_analyzer*"]
