[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codengine-runner"
version = "0.1.0"
description = "Execute the codengine IR (Intermediate Representation) in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
include = ["codengine_runner*"]
