[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codengine-core"
version = "0.1.0"
description = "The codengine contract in Python: execution and description types."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
include = ["codengine_core*"]
